Fixed spacing of logo on Home Page

--- a/css/index.css
+++ b/css/index.css
@@ -35,7 +35,7 @@ body {
 }
 
 .header img {
-  margin-top: 30px;
+  margin-top: 50px;
   max-width: 400px;
   width: 1024px;
 }
